# AutoAvoider

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
configs/control/: default.yaml
configs/perception/: default.yaml
configs/sim/: default.yaml
configs/vehicle/: default.yaml
docs/: README_zh.md  configs.md  configs_zh.md
src/AutoAvoider/: __init__.py
src/AutoAvoider/common/: __init__.py  config.py  logging.py
src/AutoAvoider/control/: __init__.py
src/AutoAvoider/perception/: __init__.py  datastore.py  train.py  transforms.py
src/AutoAvoider/perception/models/: keras.py  pilot.py
src/AutoAvoider/services/: __init__.py
src/AutoAvoider/sim/: __init__.py  collector.py  interfaces.py  mock_env.py  runner.py
src/AutoAvoider/tools/: __init__.py  path_utils.py
src/AutoAvoider/vehicle/: __init__.py
tests/: test_config.py  test_datastore.py  test_path_utils.py  test_perception_models.py  test_sim_collector.py  test_sim_mock.py  test_transforms.py
