[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoavoider"
version = "0.1.0"
description = "Simulation-first stereo obstacle avoidance project."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "TBD" }
authors = [{ name = "AutoAvoider Contributors" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
